importscript.txt
# Import FBX
bpy.ops.import_scene.fbx( filepath = yourFBXfilePath )

# Export blend file
bpy.ops.wm.save_mainfile( filepath = yourBlendFilePath )



# /home/dandorado/blender/fbxfiles/Cat.fbx




Python:   File "\Text", line 4
    bpy.ops.import_scene.fbx(filepath="C:\Users\DanDo\Downloads\AnimalsFBX\Animals\FBX\Dog.fbx")
                                                                                               ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape










Working

import bpy

# Import FBX
bpy.ops.import_scene.fbx(filepath=r"C:\Users\DanDo\Downloads\AnimalsFBX\Animals\FBX\Dog.fbx")